Force full update: backend render ready

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,15 @@ fastapi
 uvicorn
 numpy
 pydantic
-tensorflow-cpu
-transformers
-torch
-sentencepiece
-google-cloud-speech
 python-multipart
+
+# ML
+torch==2.1.0
+transformers==4.36.2
+sentencepiece
+
+# LSTM
+tensorflow-cpu==2.13.0
+
+# Audio
+
